Sketch layout done0

--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,140 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Test</title>
+    <link
+      href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://unpkg.com/ionicons@4.5.5/dist/css/ionicons.min.css"
+      rel="stylesheet"
+    />
+
+    <title>Movie Library</title>
   </head>
-  <body></body>
+  <body>
+    <header class="header">
+      <div class="logo">
+        <i class="icon ion-ios-play-circle"></i>Movie Library
+      </div>
+      <form action="#" class="search">
+        <button class="search__button">
+          <i class="icon ion-ios-search"></i>
+        </button>
+
+        <input
+          type="text"
+          class="search__input"
+          placeholder="Type the movie name..."
+        />
+      </form>
+      <nav class="menu">
+        <div class="menu__viewed">
+          <i class="icon ion-ios-checkmark-circle"></i>
+        </div>
+        <div class="menu__favorite"><i class="icon ion-ios-heart"></i></div>
+      </nav>
+    </header>
+    <div class="container__movies">
+      <div class="movie">
+        <img
+          class="movie__img"
+          src="https://m.media-amazon.com/images/M/MV5BMzFkM2YwOTQtYzk2Mi00N2VlLWE3NTItN2YwNDg1YmY0ZDNmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SX300.jp"
+          alt=""
+        />
+        <h1 class="movie__name">Home Alone</h1>
+        <h5 class="movie__year">1995</h5>
+      </div>
+      <div class="movie">
+        <img
+          class="movie__img"
+          src="https://m.media-amazon.com/images/M/MV5BMzFkM2YwOTQtYzk2Mi00N2VlLWE3NTItN2YwNDg1YmY0ZDNmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SX300.jp"
+          alt=""
+        />
+        <h1 class="movie__name">Home Alone</h1>
+        <h5 class="movie__year">1995</h5>
+      </div>
+      <div class="movie">
+        <img
+          class="movie__img"
+          src="https://m.media-amazon.com/images/M/MV5BMzFkM2YwOTQtYzk2Mi00N2VlLWE3NTItN2YwNDg1YmY0ZDNmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SX300.jp"
+          alt=""
+        />
+        <h1 class="movie__name">Home Alone</h1>
+        <h5 class="movie__year">1995</h5>
+      </div>
+      <div class="movie">
+        <img
+          class="movie__img"
+          src="https://m.media-amazon.com/images/M/MV5BMzFkM2YwOTQtYzk2Mi00N2VlLWE3NTItN2YwNDg1YmY0ZDNmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SX300.jp"
+          alt=""
+        />
+        <h1 class="movie__name">Home Alone</h1>
+        <h5 class="movie__year">1995</h5>
+      </div>
+      <div class="movie">
+        <img
+          class="movie__img"
+          src="https://m.media-amazon.com/images/M/MV5BMzFkM2YwOTQtYzk2Mi00N2VlLWE3NTItN2YwNDg1YmY0ZDNmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SX300.jp"
+          alt=""
+        />
+        <h1 class="movie__name">Home Alone</h1>
+        <h5 class="movie__year">1995</h5>
+      </div>
+      <div class="movie">
+        <img
+          class="movie__img"
+          src="https://m.media-amazon.com/images/M/MV5BMzFkM2YwOTQtYzk2Mi00N2VlLWE3NTItN2YwNDg1YmY0ZDNmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SX300.jp"
+          alt=""
+        />
+        <h1 class="movie__name">Home Alone</h1>
+        <h5 class="movie__year">1995</h5>
+      </div>
+      <div class="movie">
+        <img
+          class="movie__img"
+          src="https://m.media-amazon.com/images/M/MV5BMzFkM2YwOTQtYzk2Mi00N2VlLWE3NTItN2YwNDg1YmY0ZDNmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SX300.jp"
+          alt=""
+        />
+        <h1 class="movie__name">Home Alone</h1>
+        <h5 class="movie__year">1995</h5>
+      </div>
+      <div class="movie">
+        <img
+          class="movie__img"
+          src="https://m.media-amazon.com/images/M/MV5BMzFkM2YwOTQtYzk2Mi00N2VlLWE3NTItN2YwNDg1YmY0ZDNmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SX300.jp"
+          alt=""
+        />
+        <h1 class="movie__name">Home Alone</h1>
+        <h5 class="movie__year">1995</h5>
+      </div>
+      <div class="movie">
+        <img
+          class="movie__img"
+          src="https://m.media-amazon.com/images/M/MV5BMzFkM2YwOTQtYzk2Mi00N2VlLWE3NTItN2YwNDg1YmY0ZDNmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SX300.jp"
+          alt=""
+        />
+        <h1 class="movie__name">Home Alone</h1>
+        <h5 class="movie__year">1995</h5>
+      </div>
+      <div class="movie">
+        <img
+          class="movie__img"
+          src="https://m.media-amazon.com/images/M/MV5BMzFkM2YwOTQtYzk2Mi00N2VlLWE3NTItN2YwNDg1YmY0ZDNmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SX300.jp"
+          alt=""
+        />
+        <h1 class="movie__name">Home Alone</h1>
+        <h5 class="movie__year">1995</h5>
+      </div>
+      <div class="movie">
+        <img
+          class="movie__img"
+          src="https://m.media-amazon.com/images/M/MV5BMzFkM2YwOTQtYzk2Mi00N2VlLWE3NTItN2YwNDg1YmY0ZDNmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_SX300.jp"
+          alt=""
+        />
+        <h1 class="movie__name">Home Alone</h1>
+        <h5 class="movie__year">1995</h5>
+      </div>
+    </div>
+  </body>
 </html>
