--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
     </header>
     <div class="container">
       <!-- SINGLE PAGE -->
-      <!-- <div class="container__single">
+      <div class="container__single">
         <div class="container__single__img">
           <img
             class="img__single"
@@ -131,7 +131,8 @@
             <i class="icon ion-ios-arrow-round-back"></i>BACK
           </button>
         </div>
-      </div> -->
+      </div>
+
       <!-- LOADER-->
       <!-- <div class="loader">
         <div class="line"></div>
@@ -139,6 +140,7 @@
         <div class="line"></div>
         <div class="line"></div>
       </div> -->
+
       <!-- HOME -->
       <!-- <div class="container__home">
         <div class="container__home-left">
@@ -153,8 +155,9 @@
           <p class="container__home-text">🔥 Enjoy</p>
         </div>
       </div> -->
+
       <!-- MOVIES SEARCH VIEW -->
-      <div class="container__search">
+      <!-- <div class="container__search">
         <h1 class="results">Search results for "Home alone"</h1>
         <div class="container__movies">
           <div class="movie">
@@ -266,7 +269,7 @@
             <i class="icon ion-ios-arrow-round-forward"></i>Page 3
           </button>
         </div>
-      </div>
+      </div> -->
     </div>
   </body>
 </html>
