Search Model done search view started search controller started

--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
     </header>
     <div class="container">
       <!-- SINGLE PAGE -->
-      <div class="container__single">
+      <!-- <div class="container__single">
         <div class="container__single__img">
           <img
             class="img__single"
@@ -131,7 +131,7 @@
             <i class="icon ion-ios-arrow-round-back"></i>BACK
           </button>
         </div>
-      </div>
+      </div> -->
 
       <!-- LOADER-->
       <!-- <div class="loader">
