--- a/src/index.html
+++ b/src/index.html
@@ -142,7 +142,7 @@
       </div> -->
 
       <!-- HOME -->
-      <!-- <div class="container__home">
+      <div class="container__home">
         <div class="container__home-left">
           <img src="./img/undraw_movie_night_93wl.svg" alt="Movie Library" />
         </div>
@@ -154,7 +154,7 @@
           <p class="container__home-text">➡️ Press enter or the search icon</p>
           <p class="container__home-text">🔥 Enjoy</p>
         </div>
-      </div> -->
+      </div>
 
       <!-- MOVIES SEARCH VIEW -->
       <!-- <div class="container__search">
